2005-08-31  Tim-Philipp Müller  <tim at centricular dot net>

	* sys/v4l/gstv4lsrc.c: (gst_v4lsrc_set_property),
	(gst_v4lsrc_get_property):
	  The 'timestamp-offset' property is registered as an int64, so
	  let's use g_value_{set|get}_int64() in our setter and getter
	  functions (makes it work and fixes warnings with gst-inspect).

2005-08-30  Wim Taymans  <wim@fluendo.com>

	* check/elements/audioconvert.c: (setup_audioconvert):
	* check/elements/audioresample.c: (setup_audioresample):
	* check/elements/volume.c: (setup_volume):
	Fix checks.

2005-08-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* common/gtk-doc-plugins.mak:
	* common/plugins.xsl:
	* docs/plugins/Makefile.am:
	  make module a param

2005-08-30  Stefan Kost  <ensonic@users.sf.net>

	* examples/seeking/seek.c: (make_mp3_pipeline),
	(make_mpeg_pipeline), (seek_cb), (start_seek), (stop_seek),
	(play_cb), (pause_cb), (stop_cb):
	  update the example

2005-08-30  Stefan Kost  <ensonic@users.sf.net>

	* gst/volume/gstvolume.c: (gst_volume_class_init),
	(volume_transform):
	  do not update controlled params, if buffer has no timestamp

2005-08-29  Stefan Kost  <ensonic@users.sf.net>

	* configure.ac:
	* gst/sine/Makefile.am:
	* gst/volume/Makefile.am:
	  controllerized elements also need to link against controller-libs ;)

2005-08-29  Stefan Kost  <ensonic@users.sf.net>

	* docs/libs/tmpl/gstcolorbalance.sgml:
	* docs/libs/tmpl/gstgconf.sgml:
	* docs/libs/tmpl/gstmixer.sgml:
	* docs/libs/tmpl/gstringbuffer.sgml:
	* gst/sine/gstsinesrc.c: (gst_sinesrc_class_init),
	(gst_sinesrc_create):
	* gst/volume/gstvolume.c: (gst_volume_class_init),
	(volume_transform):
	  controllerized two audio plugins

2005-08-29  Andy Wingo  <wingo@pobox.com>

	* ext/vorbis/vorbisdec.c (vorbis_dec_convert, vorbis_dec_push) 
	(vorbis_handle_data_packet): Fix some int overflow errors.

	* ext/ogg/gstoggdemux.c (gst_ogg_demux_init): Init total_time to
	-1.